Bug 381993: Crash [@ nsDOMMouseEvent::GetClientX] with mousemove generating and removing stuff. r=smaug, sr=roc.